# MyTendo

./: .gitignore
backend/: pyproject.toml  todo
backend/FastAPIBackend/: pyproject.toml
backend/FlaskBackend/: pyproject.toml
backend/backend/: main.py
backend/backend/api/: api.py  middleware.py
backend/backend/database/: database.py  interface.py
backend/backend/models/: game.py
backend/backend/schemas/: game.py
backend/backend/service/: generate_csv.py  handleWiki.py  handle_wiki.py
frontend/: .prettierrc.json  package-lock.json  package.json
frontend/src/: App.css  App.tsx  GameStore.ts
placeholder/: index.html
