[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["stormcrow <monkiimode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1"
fastapi = "^0"
uvicorn = "^0"
pydantic = "^2"
httpio = "^0"
sqlalchemy = "^2"
ruff = "^0"
httpx = "^0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[tool.ruff]
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
extend-select = [
   "E",
   "B",
   "F",
   "W",
   "SIM",
   "TCH",
   "C4",
   "BLE",
   "ERA",
   "I",
   "INP",
   "ISC",
   "N",
   "NPY",
   "PGH",
   "S",
   "RUF",
   "S",
   "T20",
   "TID",
   "YTT"
]
extend-ignore = ["E203", "E501", "S101","S501","TID252","T201"]
fixable = ["ALL"]
fix = true
show-fixes = true
